--- a/app/views/application/_kullanicipaneli.html.erb
+++ b/app/views/application/_kullanicipaneli.html.erb
@@ -1,4 +1,4 @@
-<div id='cssmenu'  style=" margin-bottom: 20px;">
+<div id='cssmenu'  style="width:100%; margin-bottom: 20px;">
 	<ul>
 
 		<% if current_user!=nil %>
