--- a/app/views/index/universiteler.html.erb
+++ b/app/views/index/universiteler.html.erb
@@ -89,6 +89,11 @@
 				smartmenus('#main-menu').smartmenus();
 			});
 		</script>
+		
+		<!-- Tooltip eklentisi-->
+
+		<link rel="stylesheet" type="text/css"
+		href="/resources/plugins/tooltipplugin/tooltip.css" />
 
 		<!-- end of plugins  -->
 
@@ -365,27 +370,58 @@
 									<% if @adverts!=[] %>
 									<% @adverts.each do |advert|  %>
 
-									<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
+									<div class="col-lg-2 col-md-3 hidden-xs hidden-sm">
 
 										<div class="thumbnail">
 											<a href="<%= advert.href %>"> <% if advert.images == [] %>
-											<%= image_tag Image.new.imagefile %>
+											<%= image_tag Image.new.imagefile,:title => advert.name,class: "masterTooltip" %>
 											<% else %>
-											<%= image_tag advert.images[0].imagefile(:small) %>
+											<%= image_tag advert.images[0].imagefile(:small),:title => advert.name,class: "masterTooltip" %>
 											<% end %> </a>
 
 										</div>
 
 										<div class="caption">
 
-											<% if advert.name.length <= 15 %>
+											<% if advert.name.length <= 13 %>
 
-											<h5><%= advert.name %></h5>
-											<br>
+											<p><%= advert.name %></p>
+											
 
 											<% else %>
 
-											<h5><%= advert.name[0..25] + "..." %></h5>
+											<p><%= advert.name[0..12] + "..." %></p>
+
+											<% end %>
+
+										</div>
+
+									</div>
+									
+									
+									
+									
+									<div class="visible-xs visible-sm  col-sm-4 col-xs-6">
+
+										<div class="thumbnail">
+											<a href="<%= advert.href %>"> <% if advert.images == [] %>
+											<%= image_tag Image.new.imagefile,:title => advert.name,class: "masterTooltip" %>
+											<% else %>
+											<%= image_tag advert.images[0].imagefile(:small),:title => advert.name,class: "masterTooltip" %>
+											<% end %> </a>
+
+										</div>
+
+										<div class="caption">
+
+											<% if advert.name.length <= 10 %>
+
+											<p><%= advert.name %></p>
+											
+
+											<% else %>
+
+											<p><%= advert.name[0..9] + "..." %></p>
 
 											<% end %>
 
@@ -416,6 +452,16 @@
 			</div>
 
 			<!-- pluginler -->
+			
+			<!-- Tooltip eklentisi-->
+
+			<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+
+			<script>
+				var $tooltip = jQuery.noConflict();
+			</script>
+
+			<script type="text/javascript" src="/resources/plugins/tooltipplugin/tooltip.js"></script>
 
 			<!--  Dropdown menü-->
 
