--- a/public/resources/plugins/captionplugin/caption.css
+++ b/public/resources/plugins/captionplugin/caption.css
@@ -1,10 +1,11 @@
 div.wrapper{
 	position:relative; /* important(so we can absolutely position the description div */ 
 }
-div.description{
+div.description,div.descriptionSabit{
 	position:absolute; /* absolute position (so we can position it where we want)*/
 	bottom:0px; /* position will be on bottom */
 	left:0px;
+	width:100%;
 	display:none; /* hide it */
 	/* styling bellow */
 	background-color:black;
