--- a/public/resources/plugins/dropdownloginbox/css/style.css
+++ b/public/resources/plugins/dropdownloginbox/css/style.css
@@ -7,6 +7,7 @@
     position:relative;
     float:right;
     font-size:12px;
+    
 }
 
 /* Login Button */
@@ -30,7 +31,7 @@
     text-shadow:1px 1px #fff; 
     padding:7px 29px 9px 10px;
     background:url(../images/loginArrow.png) no-repeat 140px 7px;
-    display:block
+    display:block;
     
 }
 
