--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -2106,7 +2106,7 @@
 							<div class="jcarousel">
 								<ul>
 
-									<% @mostpopular.each do |advert| %>
+									<% @bizimsectiklerimiz.each do |advert| %>
 
 									<li>
 										<% if advert.images != [] %>
